# picowalker

./: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  LICENSE.md  Makefile  README.md  build.sh  ft2232h.cfg  lv_conf.h
assets/: picowalker_logo.afdesign
boards/picowalker-v0.1/: CMakeLists.txt  board_resources.h
boards/picowalker-v0.2/: CMakeLists.txt  board_resources.h  main.c
boards/picowalker-v0.3/: CMakeLists.txt  board_resources.h  main.c
boards/picowalker-v0.3-usb/: CMakeLists.txt  board_resources.h  main.c
boards/rp2040touchlcd128/: CMakeLists.txt  board_resources.h  main.c
boards/rp2350lcd128/: CMakeLists.txt  board_resources.h  main.c  picowalker_rp2350lcd128.uf2
boards/rp2350touchlcd128/: CMakeLists.txt  board_resources.h  main.c
boards/rp2350touchlcd169/: CMakeLists.txt  board_resources.h  main.c
docs/: BUGS.md  CUSTOM.md  DESIGN.md  NOTES.md  TODO.md  TUTORIAL.md  char-encoding.txt  flows.md  notes.md
src/: RP2350TouchLCD128.c  RP2350TouchLCD128.h  accel.c  allocators.c  allocators.h  buffers.c  buffers.h  buttons.c  buttons.h  eeprom.c  eeprom.h  eeprom_map.h  flash.h  globals.c  globals.h  ir_commands.h  ir_comms.c  ir_comms.h  main.c  main_lvgl.c  menu.c  menu.h  msc_disk.c  msc_disk.h  pico_roms.h  picowalker-defs.h  picowalker.c  picowalker.h  picowalker_core.h  picowalker_structures.h  pokeball.c  pokeball.h  pw_images.c  pw_images.h  pwroms.S  pwroms.h  rand.c  rand.h  route_info.c  route_info.h  (+13 more)
src/apps/: app_battle.c  app_battle.h  app_comms.c  app_comms.h  app_dowsing.c  app_dowsing.h  app_first_comms.c  app_first_comms.h  app_inventory.c  app_inventory.h  app_poke_radar.c  app_poke_radar.h  app_splash.c  app_splash.h  app_trainer_card.c  app_trainer_card.h
src/assets/: lv_conf.h  picowalker_background_240x240_lvgl.c  picowalker_background_240x240_lvgl.h  picowalker_background_ultra_240x240_lvgl.c  picowalker_background_ultra_240x240_lvgl.h  picowalker_rp2350_color.S  picowalker_rp2350_color_icons.c  picowalker_rp2350_color_icons.h  picowalker_rp2350_color_memmap.ld  picowalker_rp2350_color_pokemon_large.c  picowalker_rp2350_color_pokemon_large.h  picowalker_rp2350_color_pokemon_large_shiny.c  picowalker_rp2350_color_pokemon_large_shiny.h  picowalker_rp2350_color_pokemon_small.c  picowalker_rp2350_color_pokemon_small.h  picowalker_rp2350_color_rle.c  picowalker_rp2350_color_rle.h  picowalker_rp2350_color_routes.c  picowalker_rp2350_color_routes.h  picowalker_rp2xxx_inbuilt.S  picowalker_rp2xxx_inbuilt.h  pokewalker_rp2xxx_inbuilt.S  pokewalker_rp2xxx_inbuilt.c  pokewalker_rp2xxx_inbuilt.h
src/boards/picowalker-v0.1/: CMakeLists.txt
src/boards/picowalker-v0.3/: CMakeLists.txt
src/boards/rp2040touchlcd128/: CMakeLists.txt
src/boards/rp2350touchlcd128/: CMakeLists.txt  board_resources.h  picowalker_rp2350touchlcd128.uf2
src/drivers/: accel_RP2350TouchLCD128.c  accel_RP2350TouchLCD128.h  accel_bma400.c  accel_bma400.h  accel_pico_bma400.c  accel_pico_bma400.h  accel_rp2350_qmi8658a.c  accel_rp2350_qmi8658a.h  audio_pico_pwm.c  battery_pico_bq25628e.c  battery_pico_bq25628e.h  buttons_pico.c  buttons_pico.h  buttons_rp2350_cst816s.c  buttons_rp2350_cst816s.h  eeprom_25lc512.c  eeprom_25lc512.h  eeprom_pico_25lc512.c  eeprom_pico_m95512.c  eeprom_pico_m95512.h  eeprom_pico_ram.S  eeprom_pico_ram.c  eeprom_pico_ram.h  extra_flash_w25q128.c  extra_flash_w25q128.h  extras_pico.S  flash_pico.S  flash_pico.c  flash_pico.h  flash_pico_w25q128.c  flash_pico_w25q128.h  gpio_interrupts_pico.c  i2c_rp2350.h  ir.c  ir.h  ir_pico.c  ir_pico.h  ir_pico_pio.c  ir_pico_pio.h  ir_pico_uart1.c  (+24 more)
src/drivers/accel/: accel_pico_bma400.c  accel_pico_bma400.h  accel_rp2xxx_qmi8658.c  accel_rp2xxx_qmi8658.h  bma400_rp2xxx_spi.c  bma400_rp2xxx_spi.h  qmi8658_rp2xxx.c  qmi8658_rp2xxx.h
src/drivers/audio/: audio_pico_pwm.c  pwm_rp2xxx.c
src/drivers/battery/: adc_rp2xxx.c  adc_rp2xxx.h  battery_pico_bq25628e.c  battery_pico_bq25628e.h  battery_rp2xxx_simple.c  battery_rp2xxx_simple.h  bq25628e_rp2xxx_i2c.c  bq25628e_rp2xxx_i2c.h
src/drivers/buttons/: buttons_pico.h  buttons_rp2xxx_simple.c  buttons_rp2xxx_simple.h
src/drivers/eeprom/: 25lc512_rp2xxx_spi.c  25lc512_rp2xxx_spi.h  eeprom_pico_25lc512.h  eeprom_pico_m95512.h  eeprom_rp2xxx_emulated.c  eeprom_rp2xxx_emulated.h  emulated_rp2xxx.c  emulated_rp2xxx.h  m95512_rp2xxx_spi.c  m95512_rp2xxx_spi.h  ram_rp2xxx.S  ram_rp2xxx.c
src/drivers/flash/: flash_pico_internal.S  flash_rp2xxx_internal.S  flash_rp2xxx_internal.c  flash_rp2xxx_internal.h  w25q128_rp2xxx_spi.c  w25q128_rp2xxx_spi.h
src/drivers/input/: buttons_rp2xxx_gpio.c  buttons_rp2xxx_gpio.h  buttons_rp2xxx_lvgl.c  buttons_rp2xxx_lvgl.h
src/drivers/interrupts/: rp2xxx_gpio.c  rp2xxx_gpio.h
src/drivers/ir/: ir_pico_pio.c  ir_pico_pio.h  pioAsm.h  rp2xxx_pio.c  rp2xxx_pio.h  rp2xxx_uart.c  rp2xxx_uart.h  rp2xxx_usb_cdc.c  rp2xxx_usb_cdc.h
src/drivers/log/: onboard_log.c  onboard_log.h  stdio_rp2xxx_uart.c
src/drivers/power/: power_pico.c  power_pico.h  power_rp2xxx_ws.c
src/drivers/screen/: gc9a01a_rp2040_lvgl.c  gc9a01a_rp2040_lvgl.h  gc9a01a_rp2350_lvgl.c  gc9a01a_rp2350_lvgl.h  gc9a01a_rp2xxx.c  gc9a01a_rp2xxx.h  gc9a01a_rp2xxx_lvgl.c  gc9a01a_rp2xxx_lvgl.h  qspi.pio  screen_pico2_dwo_pio.c  screen_rp2xxx_gc9a01a_lvgl.c  screen_rp2xxx_gc9a01a_lvgl.h  sh8601z_rp2350_hstx.c  sh8601z_rp2350_hstx.h  sh8601z_rp2xxx_qspi_pio.c  sh8601z_rp2xxx_qspi_pio.h  st7789v2_rp2350_lvgl.c  st7789v2_rp2350_lvgl.h  st7789v2_rp2xxx_lvgl.c  st7789v2_rp2xxx_lvgl.h
src/drivers/sleep/: dormant_rp2xxx.c  dormant_rp2xxx.h  dormant_rp2xxx_ws.c  dormant_rp2xxx_ws.h  light_sleep_rp2xxx.c
src/drivers/time/: rp2040.c  rp2040_aon.c  rp2350_powman.c
src/drivers/usb/: msc_disk.c  msc_disk.h  tusb_config.h  usb_descriptors.c
src/globals/: lv_conf.h
src/ir/: actions.c  actions.h  compression.c  compression.h  ir.c  ir.h  pw_ir.c  pw_ir.h  pw_ir_actions.c  pw_ir_actions.h
